Title and icon overlap on public_notices.  Iterators issue # 39.

--- a/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
+++ b/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
@@ -722,7 +722,7 @@ David:
 Where: node--department-profile.html.twig
 What: Fixes the department icon to be 100px square. (Iterators issue #39)
 */
-@media (min-width: 980px) {
+@media screen and  (min-width: 980px) {
   .node-type-department-profile .department-icon {
     padding: 13px 0 0 13px;
   }
@@ -730,6 +730,11 @@ What: Fixes the department icon to be 100px square. (Iterators issue #39)
 .node-department-profile .department-icon svg {
   height: 76px;
   width: 76px;
+}
+@media screen and (min-width: 980px) and (max-width: 1300px) {
+  .node-type-department-profile .department-icon {
+    margin-left: auto;
+  }
 }
 
 /*
